<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lang_select_text"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginStart="25dp"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@drawable/lang_background"
                android:layout_weight="1"
                android:text="@string/eng"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:padding="12dp"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@drawable/lang_background"
                android:layout_weight="1"
                android:text="@string/hn"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:padding="12dp"
                android:layout_marginStart="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@drawable/lang_background"
                android:layout_weight="1"
                android:text="@string/bn"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:padding="12dp"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@drawable/lang_background"
                android:layout_weight="1"
                android:text="@string/or"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:padding="12dp"
                android:layout_marginStart="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@drawable/lang_background"
                android:layout_weight="1"
                android:text="@string/kn"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:padding="12dp"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@drawable/lang_background"
                android:layout_weight="1"
                android:text="@string/ta"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:padding="12dp"
                android:layout_marginStart="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@drawable/lang_background"
                android:layout_weight="1"
                android:text="@string/te"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:padding="12dp"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@drawable/lang_background"
                android:layout_weight="1"
                android:text="@string/ml"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:padding="12dp"
                android:layout_marginStart="5dp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="356dp"
        android:layout_height="100dp"
        android:layout_marginStart="13dp"
        android:text="@string/acknowledgement_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/get_started_button"
        android:layout_width="175dp"
        android:layout_height="65dp"
        android:background="@drawable/background_button_intro"
        android:gravity="center"
        android:text="@string/get_started_btn"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>